[package]
name = "piet-window"
version = "0.1.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piet-common = { git = "https://github.com/hecrj/piet.git" }
raw-window-handle = "0.3"
cairo-rs = { version = "0.7.1", default_features = false }
cairo-sys-rs = { version = "0.9", features = ["xlib"] }
x11 = "2.18.1"

[dev-dependencies]
winit = { version = "0.20.0-alpha3", git = "https://github.com/rust-windowing/winit", rev = "709808eb4e69044705fcb214bcc30556db761405" }
