[package]
name = "piet-window"
version = "0.1.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2018"

[dependencies]
piet-common = "0.4"
raw-window-handle = "0.3"

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
x11 = "2.18"
cairo-rs = { version = "0.9", default_features = false }
cairo-sys-rs = { version = "0.10", features = ["xlib"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.20"
objc = "0.2"

[dev-dependencies]
winit = { git = "https://github.com/iced-rs/winit.git" }
